[package]
name = "ron-objmask-workaround"
version = "1.0.0"
authors = ["Matthew Nicholls <matthew.nicholls95@hotmail.co.uk>"]
edition = "2018"
license = "MIT"
readme = "README.md"

build = "build.rs"

[profile.release]
panic = "abort"
codegen-units = 1

[build-dependencies]
embed-resource = "1.3"

[dependencies]
quick-xml = "0.20"
indexmap = "1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["objbase", "combaseapi", "shobjidl", "wincon", "winerror"] }
wchar = "0.6"